[package]
name = "ica"
version = "0.1.0"
authors = ["epos95 <max.agnesund95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
select = "0.5.0"
clap = "3.0.0-beta.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
dirs = "3.0.1"
termion = "1.0.0"
sublime_fuzzy = "0.7.0"
